hyperlane-warp-ui/stack/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hyperlane-warp-ui
  labels:
    app.kubernetes.io/name: hyperlane-warp-ui
    app.kubernetes.io/component: frontend
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: hyperlane-warp-ui
